Fix outline offset for print buttons
The way it was working, there was an offset because of the sticky
div heading stacked above it, and the z-index was higher, so the
focus ring was kind of cut off.

--- a/nofos/bloom_nofos/static/styles.css
+++ b/nofos/bloom_nofos/static/styles.css
@@ -1072,7 +1072,7 @@ label.usa-label {
   display: inline-block;
   margin: 1em 0;
   position: sticky;
-  top: 186px;
+  top: 182px;
 }
 
 .nofo_edit main table.usa-table > tbody > tr:first-of-type > th {
